@@ -4,6 +4,7 @@
 * Fix - Adding the list of Envira Gallery tags to the wp_kses_post allowed filter method.
 * Dev - Added in WPForms Lite as a list of forms to choose for your enquiry.
 * Fix - Fixed tours and destinations collapsible tabs on mobile issue.
+* Dev - Added in the destinations to the Accommodation breadcrumbs
 
 ### 1.1.3
 * Fix - Cleaning code to meet more Wordpress Standards
